--- a/templates/index.html
+++ b/templates/index.html
@@ -6,37 +6,38 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <link rel="stylesheet" href="../static/css/base.css">
+    <link href="https://fonts.googleapis.com/css?family=Sansita:400,400i,700,700i,800,800i,900,900i|Source+Serif+Pro:400,600,700" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <header>
-            <h3>Higor Rossato</h3>
-            <ul class="nav">
+            <h3 class="sansita-font">Higor Rossato</h3>
+            <ul class="nav source-serif-pro-font font-16">
                 <li><a href="">About</a></li>
             </ul>
-            <p class="intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi amet fuga suscipit odit rem sunt dicta maiores placeat consequuntur, unde, ipsum voluptatibus assumenda distinctio aperiam ea ipsa, architecto! Molestias, odio.</p>
+            <p class="intro source-serif-pro-font font-16">I'm a Brazilian software developer living in London, UK. I work for Bitstocks writing code using Python and Django.</p>
         </header>
     </div>
-    <div class="content">
+    <div class="content source-serif-pro-font">
         <div class="post">
-            <span class="post__date">September 15, 1986</span>
-            <a href="" class="post__title">This is a title of a post</a>
+            <span class="post__date font-14">September 15, 1986</span>
+            <a href="" class="post__title font-18">This is a title of a post</a>
         </div>
         <div class="post">
-            <span class="post__date">September 15, 1986</span>
-            <a href="" class="post__title">This is a title of a post</a>
+            <span class="post__date font-14">September 15, 1986</span>
+            <a href="" class="post__title font-18">This is a title of a post</a>
         </div>
         <div class="post">
-            <span class="post__date">September 15, 1986</span>
-            <a href="" class="post__title">This is a title of a post</a>
+            <span class="post__date font-14">September 15, 1986</span>
+            <a href="" class="post__title font-18">This is a title of a post</a>
         </div>
         <div class="post">
-            <span class="post__date">September 15, 1986</span>
-            <a href="" class="post__title">This is a title of a post</a>
+            <span class="post__date font-14">September 15, 1986</span>
+            <a href="" class="post__title font-18">This is a title of a post</a>
         </div>
         <div class="post">
-            <span class="post__date">September 15, 1986</span>
-            <a href="" class="post__title">This is a title of a post</a>
+            <span class="post__date font-14">September 15, 1986</span>
+            <a href="" class="post__title font-18">This is a title of a post</a>
         </div>
     </div>
 </body>
