home and post detail

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,83 +9,160 @@ body {
   background-color: #fff;
   color: #555;
   line-height: 1.5;
-  padding: 2rem 1.5rem; }
+  padding: 32px 24px; }
 
 .sansita-font {
   font-family: "Sansita", sans-serif;
   font-style: italic;
   font-weight: 700; }
 
-.source-serif-pro-font {
-  font-family: "Source Serif Pro", serif;
-  font-weight: 400; }
-
-.font-14 {
-  font-size: 14px; }
-
-.font-18 {
-  font-size: 18px; }
+.merriweather {
+  font-family: "Merriweather", serif;
+  font-weight: 300; }
 
 .container {
   margin: 0 auto;
-  max-width: 32rem; }
+  max-width: 512px; }
 
 h1, h2, h3, h4, h5, h6 {
   color: #333;
   font-weight: bold;
   line-height: 1.1;
-  letter-spacing: -0.025rem;
+  letter-spacing: -0.4px;
   margin-top: 0;
-  margin-bottom: 0.5rem; }
+  margin-bottom: 8px; }
 
 header {
   color: #777;
-  font-size: 1rem;
+  font-size: 16px;
   margin-bottom: 0; }
 
-h3 {
-  font-size: 1.2rem; }
+.site-name {
+  color: #e74c3c;
+  font-size: 24px;
+  margin: 12px 0 16px 0;
+  text-align: center; }
+
+.profile {
+  background-image: url("../images/higor.jpeg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 100%;
+  height: 100px;
+  margin: 0 auto;
+  width: 100px; }
 
 .nav {
-  margin-bottom: 0;
   list-style: none;
-  padding-left: 0; }
+  margin-bottom: 0;
+  padding-left: 0;
+  text-align: center; }
   .nav li {
-    display: inline-block; }
+    display: inline-block;
+    margin-left: 8px; }
+    .nav li:first-child {
+      margin-left: 0; }
     .nav li a {
+      color: #333;
+      font-family: "Merriweather", sans-serif;
+      font-weight: 400;
       text-decoration: none; }
+      .nav li a:hover {
+        color: #e74c3c; }
 
 .intro {
-  margin-top: 28.8px; }
+  margin-top: 30px;
+  text-align: center; }
 
 .intro::after {
   background-color: #eee;
   content: "";
   display: block;
   height: 1px;
-  margin: 3rem auto;
-  width: 100px; }
+  margin: 40px auto;
+  width: 200px; }
 
 .content {
-  margin-bottom: 3rem; }
+  margin-bottom: 48px; }
 
 .content::after {
   background-color: #eee;
   content: "";
   display: block;
   height: 1px;
-  margin: 3rem auto;
-  width: 100px; }
+  margin: 40px auto;
+  width: 200px; }
 
 .post {
-  margin-bottom: 1rem;
+  margin-bottom: 16px;
   overflow: auto; }
   .post__date {
-    color: #ccc;
+    color: #b1b1b1;
     display: block;
-    margin: 0 0 0.3rem; }
+    font-size: 14px; }
   .post__title {
     color: #333;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 400; }
+    .post__title:hover {
+      color: #e74c3c; }
+
+footer {
+  margin: 0 auto;
+  max-width: 90%;
+  text-align: center; }
+  footer a {
+    color: #333;
+    font-weight: 400;
+    font-style: italic;
     text-decoration: none; }
+    footer a:hover {
+      color: #e74c3c; }
+
+.post-detail__title {
+  color: #333;
+  font-size: 24px;
+  font-weight: 700;
+  text-align: right; }
+.post-detail__date {
+  color: #ccc;
+  font-weight: 300;
+  text-align: right; }
+.post-detail__text {
+  color: #454545;
+  font-weight: 300;
+  line-height: 26px;
+  padding-top: 20px; }
+
+pre {
+  margin-top: 16px !important;
+  font-size: 14px;
+  font-weight: 300; }
+
+@media screen and (min-width: 768px) {
+  header {
+    padding-top: 16px;
+    text-align: center; }
+
+  footer {
+    font-size: 16px; }
+
+  pre {
+    font-size: 16px; }
+
+  .site-name {
+    font-size: 26px; }
+
+  .post {
+    line-height: 26px;
+    margin-bottom: 16px; }
+    .post__title {
+      font-size: 32px; }
+    .post__date {
+      float: right;
+      font-size: 16px;
+      margin-left: 16px; } }
 
 /*# sourceMappingURL=base.css.map */
