--- a/static/sass/base.sass
+++ b/static/sass/base.sass
@@ -9,85 +9,176 @@ body
     background-color: #fff
     color: #555
     line-height: 1.5
-    padding: 2rem 1.5rem
+    padding: 32px 24px
 
 .sansita-font
     font-family: 'Sansita', sans-serif
     font-style: italic
     font-weight: 700
 
-.source-serif-pro-font
-    font-family: 'Source Serif Pro', serif
-    font-weight: 400
-
-.font-14
-    font-size: 14px
-
-.font-18
-    font-size: 18px
+.merriweather
+    font-family: 'Merriweather', serif
+    font-weight: 300
 
 .container
     margin: 0 auto
-    max-width: 32rem
+    max-width: 512px
 
 h1, h2, h3, h4, h5, h6
     color: #333
     font-weight: bold
     line-height: 1.1
-    letter-spacing: -.025rem
+    letter-spacing: -0.4px
     margin-top: 0
-    margin-bottom: .5rem
+    margin-bottom: 8px
 
 header
     color: #777
-    font-size: 1rem
+    font-size: 16px
     margin-bottom: 0
 
-h3
-    font-size: 1.2rem
+.site-name
+    color: #e74c3c
+    font-size: 24px
+    margin: 12px 0 16px 0
+    text-align: center
+
+.profile
+    background-image: url("../images/higor.jpeg")
+    background-position: center center
+    background-repeat: no-repeat
+    background-size: cover
+    border-radius: 100%
+    height: 100px
+    margin: 0 auto
+    width: 100px
 
 .nav
-    margin-bottom: 0
     list-style: none
+    margin-bottom: 0
     padding-left: 0
+    text-align: center
 
     li
         display: inline-block
+        margin-left: 8px
+
+        &:first-child
+            margin-left: 0
 
         a
+            color: #333
+            font-family: "Merriweather", sans-serif
+            font-weight: 400
             text-decoration: none
 
+            &:hover
+                color: #e74c3c
+
 .intro
-    margin-top: 28.8px
+    margin-top: 30px
+    text-align: center
 
 .intro::after
     background-color: #eee
     content: ""
     display: block
     height: 1px
-    margin: 3rem auto
-    width: 100px
+    margin: 40px auto
+    width: 200px
 
 .content
-    margin-bottom: 3rem
+    margin-bottom: 48px
 
 .content::after
     background-color: #eee
     content: ""
     display: block
     height: 1px
-    margin: 3rem auto
-    width: 100px
+    margin: 40px auto
+    width: 200px
 
 .post
-    margin-bottom: 1rem
+    margin-bottom: 16px
     overflow: auto
 
     &__date
-        color: #ccc
+        color: #b1b1b1
         display: block
-        margin: 0 0 0.3rem
+        font-size: 14px
 
     &__title
         color: #333
         text-decoration: none
+        font-size: 18px
+        font-weight: 400
+
+        &:hover
+            color: #e74c3c
+
+footer
+    margin: 0 auto
+    max-width: 90%
+    text-align: center
+
+    a
+        color: #333
+        font-weight: 400
+        font-style: italic
+        text-decoration: none
+
+        &:hover
+            color: #e74c3c
+
+.post-detail
+
+    &__title
+        color: #333
+        font-size: 24px
+        font-weight: 700
+        text-align: right
+
+    &__date
+        color: #ccc
+        font-weight: 300
+        text-align: right
+
+    &__text
+        color: #454545
+        font-weight: 300
+        line-height: 26px
+        padding-top: 20px
+
+pre
+    margin-top: 16px !important
+    font-size: 14px
+    font-weight: 300
+
+
+// MEDIA QUERIES
+// max-width=768px
+@media screen and (min-width: 768px)
+    header
+        padding-top: 16px
+        text-align: center
+
+    footer
+        font-size: 16px
+
+    pre
+        font-size: 16px
+
+    .site-name
+        font-size: 26px
+
+    .post
+        line-height: 26px
+        margin-bottom: 16px
+
+        &__title
+            font-size: 32px
+
+        &__date
+            float: right
+            font-size: 16px
+            margin-left: 16px
