--- a/templates/index.html
+++ b/templates/index.html
@@ -6,39 +6,47 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <link rel="stylesheet" href="../static/css/base.css">
-    <link href="https://fonts.googleapis.com/css?family=Sansita:400,400i,700,700i,800,800i,900,900i|Source+Serif+Pro:400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sansita:400,400i,700,700i,800,800i,900,900i|Merriweather:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <header>
-            <h3 class="sansita-font">Higor Rossato</h3>
-            <ul class="nav source-serif-pro-font font-16">
+            <h1 class="profile"></h1>
+            <h3 class="site-name sansita-font">Higor Rossato</h3>
+            <ul class="nav merriweather">
+                <li><a href="">About</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">About</a></li>
                 <li><a href="">About</a></li>
             </ul>
-            <p class="intro source-serif-pro-font font-16">I'm a Brazilian software developer living in London, UK. I work for Bitstocks writing code using Python and Django.</p>
+            <p class="intro merriweather">I'm a Brazilian software developer living in London, UK. I work for Bitstocks writing code using Python and Django.</p>
         </header>
-    </div>
-    <div class="content source-serif-pro-font">
-        <div class="post">
-            <span class="post__date font-14">September 15, 1986</span>
-            <a href="" class="post__title font-18">This is a title of a post</a>
+        <div class="content merriweather">
+            <div class="post">
+                <a href="" class="post__title">This is a title of a post</a>
+                <div class="post__date">September 15, 1986</div>
+            </div>
+            <div class="post">
+                <a href="" class="post__title">This is a title of a post</a>
+                <div class="post__date">September 15, 1986</div>
+            </div>
+            <div class="post">
+                <a href="" class="post__title">This is a title of a post</a>
+                <div class="post__date">September 15, 1986</div>
+            </div>
+            <div class="post">
+                <a href="" class="post__title">This is a title of a post</a>
+                <div class="post__date">September 15, 1986</div>
+            </div>
+            <div class="post">
+                <a href="" class="post__title">This is a title of a post</a>
+                <div class="post__date">September 15, 1986</div>
+            </div>
         </div>
-        <div class="post">
-            <span class="post__date font-14">September 15, 1986</span>
-            <a href="" class="post__title font-18">This is a title of a post</a>
-        </div>
-        <div class="post">
-            <span class="post__date font-14">September 15, 1986</span>
-            <a href="" class="post__title font-18">This is a title of a post</a>
-        </div>
-        <div class="post">
-            <span class="post__date font-14">September 15, 1986</span>
-            <a href="" class="post__title font-18">This is a title of a post</a>
-        </div>
-        <div class="post">
-            <span class="post__date font-14">September 15, 1986</span>
-            <a href="" class="post__title font-18">This is a title of a post</a>
-        </div>
+        <footer>
+            <p>Powered by <a href="">Pelican</a>, which takes great advantages of <a href="">Python.</a></p>
+        </footer>
     </div>
 </body>
 </html>
