--- a/static/css/base.css
+++ b/static/css/base.css
@@ -40,7 +40,7 @@ header {
 .site-name {
   color: #e74c3c;
   font-size: 24px;
-  margin: 12px 0 16px 0;
+  margin: 12px 0 20px 0;
   text-align: center; }
 
 .profile {
@@ -83,9 +83,6 @@ header {
   margin: 40px auto;
   width: 200px; }
 
-.content {
-  margin-bottom: 48px; }
-
 .content::after {
   background-color: #eee;
   content: "";
@@ -127,7 +124,7 @@ footer {
   font-weight: 700;
   text-align: right; }
 .post-detail__date {
-  color: #ccc;
+  color: #b5b5b5;
   font-weight: 300;
   text-align: right; }
 .post-detail__text {
@@ -138,8 +135,26 @@ footer {
 
 pre {
   margin-top: 16px !important;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 300; }
+
+.social {
+  text-align: center; }
+  .social__item {
+    display: inline-block;
+    margin-left: 16px; }
+    .social__item:hover {
+      color: #e74c3c; }
+    .social__item:first-child {
+      margin-left: 0; }
+
+.social::after {
+  background-color: #eee;
+  content: "";
+  display: block;
+  height: 1px;
+  margin: 40px auto;
+  width: 200px; }
 
 @media screen and (min-width: 768px) {
   header {
@@ -150,7 +165,7 @@ pre {
     font-size: 16px; }
 
   pre {
-    font-size: 16px; }
+    font-size: 14px; }
 
   .site-name {
     font-size: 26px; }
@@ -159,10 +174,15 @@ pre {
     line-height: 26px;
     margin-bottom: 16px; }
     .post__title {
-      font-size: 32px; }
+      font-size: 20px; }
     .post__date {
       float: right;
       font-size: 16px;
-      margin-left: 16px; } }
+      margin-left: 16px; }
+
+  .post-detail__title {
+    font-size: 30px; }
+  .post-detail__date {
+    font-size: 18px; } }
 
 /*# sourceMappingURL=base.css.map */
