--- a/templates/page.html
+++ b/templates/page.html
@@ -5,8 +5,9 @@
     <title>Higor Rossato | Software Developer</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+    <link rel="stylesheet" href="../static/css/prism.css">
     <link rel="stylesheet" href="../static/css/base.css">
-    <link href="https://fonts.googleapis.com/css?family=Sansita:400,400i,700,700i,800,800i,900,900i|Merriweather:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sansita:400,400i,700,700i,800,800i,900,900i|Source+Serif+Pro|Source+Sans+Pro:400,600,700" >
     <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.1.0/css/iconmonstr-iconic-font.min.css">
 </head>
 <body>
@@ -14,7 +15,7 @@
         <header>
             <h1 class="profile"></h1>
             <h3 class="site-name sansita-font">Higor Rossato</h3>
-            <ul class="nav merriweather">
+            <ul class="nav source-serif-pro-font font-16">
                 <li><a href="">About</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="">About</a></li>
@@ -23,27 +24,10 @@
             </ul>
             <p class="intro merriweather">I'm a Brazilian software developer living in London, UK. I work for Bitstocks writing code using Python and Django.</p>
         </header>
-        <div class="content merriweather">
-            <div class="post">
-                <a href="" class="post__title">This is a title of a post</a>
-                <div class="post__date">September 15, 1986</div>
-            </div>
-            <div class="post">
-                <a href="" class="post__title">This is a title of a post</a>
-                <div class="post__date">September 15, 1986</div>
-            </div>
-            <div class="post">
-                <a href="" class="post__title">This is a title of a post</a>
-                <div class="post__date">September 15, 1986</div>
-            </div>
-            <div class="post">
-                <a href="" class="post__title">This is a title of a post</a>
-                <div class="post__date">September 15, 1986</div>
-            </div>
-            <div class="post">
-                <a href="" class="post__title">This is a title of a post</a>
-                <div class="post__date">September 15, 1986</div>
-            </div>
+        <div class="content post-detail merriweather">
+            <h1 class="post-detail__title">About Me</h1>
+            <p class="post-detail__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, commodi veniam alias fugiat vitae, architecto pariatur placeat quasi. Eum minus quidem dolor molestiae odio nostrum ipsum assumenda praesentium ipsam, est!</p>
+            <p class="post-detail__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, commodi veniam alias fugiat vitae, architecto pariatur placeat quasi. Eum minus quidem dolor molestiae odio nostrum ipsum assumenda praesentium ipsam, est!</p>
         </div>
         <div class="social">
             <div class="social__item">
@@ -63,5 +47,6 @@
             <p>Powered by <a href="">Pelican</a>, which takes great advantages of <a href="">Python.</a></p>
         </footer>
     </div>
+    <script src="../static/js/prism.js"></script>
 </body>
 </html>
