--- a/static/sass/base.sass
+++ b/static/sass/base.sass
@@ -140,7 +140,7 @@ footer
         font-weight: 300
         text-align: right
 
-    &__text
+    p
         color: #454545
         font-weight: 300
         line-height: 26px
@@ -171,6 +171,9 @@ pre
     height: 1px
     margin: 40px auto
     width: 200px
+
+.im
+    color: #555 !important
 
 
 // MEDIA QUERIES
