--- a/templates/index.html
+++ b/templates/index.html
@@ -1,67 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Higor Rossato | Software Developer</title>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <link rel="stylesheet" href="../static/css/base.css">
-    <link href="https://fonts.googleapis.com/css?family=Sansita:400,400i,700,700i,800,800i,900,900i|Merriweather:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.1.0/css/iconmonstr-iconic-font.min.css">
-</head>
-<body>
-    <div class="container">
-        <header>
-            <h1 class="profile"></h1>
-            <h3 class="site-name sansita-font">Higor Rossato</h3>
-            <ul class="nav merriweather">
-                <li><a href="">About</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">About</a></li>
-            </ul>
-            <p class="intro merriweather">I'm a Brazilian software developer living in London, UK. I work for Bitstocks writing code using Python and Django.</p>
-        </header>
-        <div class="content merriweather">
+{% extends "base.html" %}
+
+{% block content %}
+    <div class="content merriweather">
+    {% for article in articles_page.object_list %}
             <div class="post">
-                <a href="" class="post__title">This is a title of a post</a>
-                <div class="post__date">September 15, 1986</div>
+                <a href="{{ SITEURL }}/{{ article.url }}" class="post__title">{{ article.title }}</a>
+                <div class="post__date">{{ article.locale_date }}</div>
             </div>
-            <div class="post">
-                <a href="" class="post__title">This is a title of a post</a>
-                <div class="post__date">September 15, 1986</div>
-            </div>
-            <div class="post">
-                <a href="" class="post__title">This is a title of a post</a>
-                <div class="post__date">September 15, 1986</div>
-            </div>
-            <div class="post">
-                <a href="" class="post__title">This is a title of a post</a>
-                <div class="post__date">September 15, 1986</div>
-            </div>
-            <div class="post">
-                <a href="" class="post__title">This is a title of a post</a>
-                <div class="post__date">September 15, 1986</div>
-            </div>
-        </div>
-        <div class="social">
-            <div class="social__item">
-                <i class="im im-mail"></i>
-            </div>
-            <div class="social__item">
-                <i class="im im-github"></i>
-            </div>
-            <div class="social__item">
-                <i class="im im-linkedin"></i>
-            </div>
-            <div class="social__item">
-                <i class="im im-twitter"></i>
-            </div>
-        </div>
-        <footer>
-            <p>Powered by <a href="">Pelican</a>, which takes great advantages of <a href="">Python.</a></p>
-        </footer>
+    {% endfor %}
     </div>
-</body>
-</html>
+
+    {% if DEFAULT_PAGINATION %}
+        <div class="paginator">
+            {% if articles_page.has_previous() %}
+                {% if articles_page.previous_page_number() == 1 %}
+                    <a href="{{ SITEURL }}/{{ page_name }}.html">
+                        <i class="im im-angle-left-circle"></i>
+                    </a>
+                {% else %}
+                    <a href="{{ SITEURL }}/{{ page_name }}{{ articles_page.previous_page_number() }}.html">
+                        <i class="im im-angle-left-circle"></i>
+                    </a>
+                {% endif %}
+            {% endif %}
+            Page {{ articles_page.number }} / {{ articles_paginator.num_pages }}
+            {% if articles_page.has_next() %}
+                <a href="{{ SITEURL }}/{{ page_name }}{{ articles_page.next_page_number() }}.html">
+                    <i class="im im-angle-right-circle"></i>
+                </a>
+            {% endif %}
+        </div>
+    {% endif %}
+{% endblock content %}
