--- a/static/css/base.css
+++ b/static/css/base.css
@@ -22,7 +22,7 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 512px; }
+  max-width: 672px; }
 
 h1, h2, h3, h4, h5, h6 {
   color: #333;
@@ -51,7 +51,14 @@ header {
   border-radius: 100%;
   height: 100px;
   margin: 0 auto;
+  position: relative;
   width: 100px; }
+  .profile a {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%; }
 
 .nav {
   list-style: none;
@@ -143,8 +150,6 @@ pre {
   .social__item {
     display: inline-block;
     margin-left: 16px; }
-    .social__item:hover {
-      color: #e74c3c; }
     .social__item:first-child {
       margin-left: 0; }
 
@@ -158,6 +163,13 @@ pre {
 
 .im {
   color: #555 !important; }
+  .im:hover {
+    color: #e74c3c !important; }
+
+.highlight {
+  margin-top: 10px;
+  padding: 0 15px 20px;
+  overflow: auto; }
 
 @media screen and (min-width: 768px) {
   header {
@@ -186,6 +198,9 @@ pre {
   .post-detail__title {
     font-size: 30px; }
   .post-detail__date {
-    font-size: 18px; } }
+    font-size: 18px; }
+
+  .highlight {
+    padding: 0 30px 30px; } }
 
 /*# sourceMappingURL=base.css.map */
