--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
         <link rel="stylesheet" href="{{ SITEURL }}/theme/css/base.css">
+        <link rel="stylesheet" href="{{ SITEURL }}/theme/css/pygment.css">
         <link href="https://fonts.googleapis.com/css?family=Sansita:400,400i,700,700i,800,800i,900,900i|Merriweather:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.1.0/css/iconmonstr-iconic-font.min.css">
     </head>
@@ -13,9 +14,13 @@
         <div class="container">
             <header>
                 {% if PROFILE_IMAGE %}
-                    <h1 class="profile" style="background-image:url({{ SITEURL }}/theme/images/{{ PROFILE_IMAGE }})"></h1>
+                    <h1 class="profile" style="background-image:url({{ SITEURL }}/theme/images/{{ PROFILE_IMAGE }})">
+                        <a href="/"></a>
+                    </h1>
                 {% else %}
-                    <h1 class="profile"></h1>
+                    <h1 class="profile">
+                        <a href="/"></a>
+                    </h1>
                 {% endif %}
 
                 <h3 class="site-name sansita-font">{{ SITENAME }}</h3>
