--- a/static/css/base.css
+++ b/static/css/base.css
@@ -81,6 +81,13 @@ header {
 .intro {
   margin-top: 30px;
   text-align: center; }
+  .intro a {
+    color: #333;
+    font-weight: 400;
+    font-style: italic;
+    text-decoration: none; }
+    .intro a:hover {
+      color: #e74c3c; }
 
 .intro::after {
   background-color: #eee;
