--- a/static/sass/base.sass
+++ b/static/sass/base.sass
@@ -86,6 +86,15 @@ header
 .intro
     margin-top: 30px
     text-align: center
+    
+    a
+        color: #333
+        font-weight: 400
+        font-style: italic
+        text-decoration: none
+
+        &:hover
+            color: #e74c3c
 
 .intro::after
     background-color: #eee
