--- a/static/css/base.css
+++ b/static/css/base.css
@@ -44,7 +44,7 @@ header {
   text-align: center; }
 
 .profile {
-  background-image: url("../images/higor.jpeg");
+  background-image: url("../images/profile-picture.jpeg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
