Adjusting templates and styles

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,34 +1,29 @@
-{% extends "base.html" %}
-
-{% block content %}
-    <div class="content merriweather">
+{% extends "base.html" %} {% block content %}
+<div class="content merriweather">
     {% for article in articles_page.object_list %}
-            <div class="post">
-                <a href="{{ SITEURL }}/{{ article.url }}" class="post__title">{{ article.title }}</a>
-                <div class="post__date">{{ article.locale_date }}</div>
-            </div>
-    {% endfor %}
+    <div class="post">
+        <a href="{{ SITEURL }}/{{ article.url }}" class="post__title">{{ article.title }}</a>
+        <p class="post__summary">{{ article.summary }}</p>
+        <div class="post__date">{{ article.locale_date }}</div>
     </div>
+    {% endfor %}
+</div>
 
-    {% if DEFAULT_PAGINATION %}
-        <div class="paginator">
-            {% if articles_page.has_previous() %}
-                {% if articles_page.previous_page_number() == 1 %}
-                    <a href="{{ SITEURL }}/{{ page_name }}.html">
-                        <i class="im im-angle-left-circle"></i>
-                    </a>
-                {% else %}
-                    <a href="{{ SITEURL }}/{{ page_name }}{{ articles_page.previous_page_number() }}.html">
-                        <i class="im im-angle-left-circle"></i>
-                    </a>
-                {% endif %}
-            {% endif %}
-            Page {{ articles_page.number }} / {{ articles_paginator.num_pages }}
-            {% if articles_page.has_next() %}
-                <a href="{{ SITEURL }}/{{ page_name }}{{ articles_page.next_page_number() }}.html">
-                    <i class="im im-angle-right-circle"></i>
-                </a>
-            {% endif %}
-        </div>
+{% if DEFAULT_PAGINATION %}
+<div class="paginator">
+    {% if articles_page.has_previous() %} {% if articles_page.previous_page_number() == 1 %}
+    <a href="{{ SITEURL }}/{{ page_name }}.html">
+        <i class="im im-angle-left-circle"></i>
+    </a>
+    {% else %}
+    <a href="{{ SITEURL }}/{{ page_name }}{{ articles_page.previous_page_number() }}.html">
+        <i class="im im-angle-left-circle"></i>
+    </a>
+    {% endif %} {% endif %} Page {{ articles_page.number }} / {{ articles_paginator.num_pages }} {% if articles_page.has_next()
+    %}
+    <a href="{{ SITEURL }}/{{ page_name }}{{ articles_page.next_page_number() }}.html">
+        <i class="im im-angle-right-circle"></i>
+    </a>
     {% endif %}
-{% endblock content %}
+</div>
+{% endif %} {% endblock content %}
