--- a/static/sass/base.sass
+++ b/static/sass/base.sass
@@ -9,7 +9,7 @@ body
     background-color: #fff
     color: #555
     line-height: 1.5
-    padding: 32px 24px
+    padding: 2rem 1.5rem
 
 .sansita-font
     font-family: 'Sansita', sans-serif
@@ -22,7 +22,6 @@ body
 
 .container
     margin: 0 auto
-    max-width: 672px
 
 h1, h2, h3, h4, h5, h6
     color: #333
@@ -30,21 +29,23 @@ h1, h2, h3, h4, h5, h6
     line-height: 1.1
     letter-spacing: -0.4px
     margin-top: 0
-    margin-bottom: 8px
+    margin-bottom: 0.5rem
 
 header
     color: #777
-    font-size: 16px
-    margin-bottom: 0
+    font-size: 1rem
+    border-bottom: 1px solid #eee
+    padding-bottom: 1.875rem
+    margin-bottom: 3.125rem
 
 .site-name
     color: #e74c3c
-    font-size: 28px
-    margin: 12px 0 20px 0
+    font-size: 2rem
+    margin: 1rem 0
     text-align: center
 
 .profile
-    background-image: url("/theme/images/profile-picture.jpg")
+    background-image: url("../images/Higor-Rossato.jpg")
     background-position: center center
     background-repeat: no-repeat
     background-size: cover
@@ -63,17 +64,17 @@ header
 
 .nav
     list-style: none
-    margin-bottom: 0
+    margin: 1.25rem auto 0
     padding-left: 0
     text-align: center
     text-transform: uppercase
 
     li
-        display: inline-block
-        margin-left: 10px
+        display: block
+        margin-top: 0.375rem
 
         &:first-child
-            margin-left: 0
+            margin-top: 0
 
         a
             color: #333
@@ -85,47 +86,35 @@ header
                 color: #e74c3c
 
 .intro
-    margin-top: 30px
     text-align: center
 
-    a
-        color: #333
-        font-weight: 400
-        font-style: italic
-        text-decoration: none
-
-        &:hover
-            color: #e74c3c
-
-.intro::after
-    background-color: #eee
-    content: ""
-    display: block
-    height: 1px
-    margin: 40px auto
-    width: 200px
-
+.paginator::after,
 .content::after
     background-color: #eee
     content: ""
     display: block
     height: 1px
-    margin: 40px auto
-    width: 200px
+    margin: 2rem auto
+    width: 100%
 
 .post
-    margin-bottom: 24px
+    margin-bottom: 4rem
     overflow: auto
 
     &__date
         color: #b1b1b1
         display: block
-        font-size: 12px
+        font-size: 0.75rem
+
+    &__summary
+        font-size: 0.875rem
+        font-style: italic
+        margin: 0.8rem 0
 
     &__title
         color: #333
         text-decoration: none
-        font-size: 16px
+        font-size: 1.2rem
         font-weight: 400
         line-height: 1.4
 
@@ -150,32 +139,33 @@ footer
 
     &__title
         color: #333
-        font-size: 22px
+        font-size: 1.375rem
         font-weight: 700
 
     &__date
         color: #b5b5b5
-        font-size: 14px
+        font-size: 0.875rem
         font-weight: 300
-        margin-bottom: 20px
+        margin-bottom: 1.25rem
 
     p
         color: #454545
         font-weight: 300
-        line-height: 26px
-        padding-top: 20px
+        line-height: 1.625rem
+        padding-top: 1.25rem
 
 pre
-    margin-top: 16px !important
-    font-size: 12px
+    margin-top: 1rem !important
+    font-size: 0.75rem
     font-weight: 300
 
 .social
+    margin-top: 1.5rem
     text-align: center
 
     &__item
         display: inline-block
-        margin-left: 26px
+        margin-left: 1.25rem
 
         &:first-child
             margin-left: 0
@@ -186,14 +176,6 @@ pre
             &:hover
                 color: #e74c3c
 
-.social::after
-    background-color: #eee
-    content: ""
-    display: block
-    height: 1px
-    margin: 40px auto
-    width: 200px
-
 .im
     color: #555 !important
 
@@ -201,50 +183,56 @@ pre
         color: #e74c3c !important
 
 .highlight
-    margin-top: 10px
-    padding: 0 15px 20px
+    margin-top: 0.625rem
+    padding: 0 1rem 1.25rem
     overflow: auto
+
+.paginator
+    text-align: center
 
 
 // MEDIA QUERIES
 // max-width=768px
 @media screen and (min-width: 768px)
+    html
+        font-size: 18px
+
     .container
         width: 800px
 
     header
-        padding-top: 16px
+        padding-top: 0.8rem
         text-align: center
 
     footer
-        font-size: 16px
+        font-size: 0.8rem
 
     pre
-        font-size: 14px
+        font-size: 0.7rem
 
     .site-name
-        font-size: 40px
+        font-size: 2.25rem
 
     .post
-        line-height: 26px
-        margin-bottom: 30px
+        line-height: 1.2rem
+        margin-bottom: 1.65rem
 
         &__title
-            font-size: 20px
+            font-size: 1.2rem
 
         &__date
-            font-size: 14px
+            font-size: 0.7rem
 
     .post-detail
         &__title
-            font-size: 30px
+            font-size: 1.65rem
 
         &__date
-            font-size: 16px
-            margin-bottom: 50px
+            font-size: 0.8rem
+            margin-bottom: 2.75rem
 
     .highlight
-        padding: 0 30px 30px
+        padding: 0 1.65rem 1.65rem
 
     .intro::after,
     .content::after,
@@ -253,5 +241,8 @@ pre
         max-width: 500px
 
     .nav
+        font-size: 0.8rem
+
         li
-            margin-left: 20px
+            display: inline-block
+            margin-left: 1.2rem
