Fixing profile image

--- a/static/sass/base.sass
+++ b/static/sass/base.sass
@@ -45,7 +45,7 @@ header
     text-align: center
 
 .profile
-    background-image: url("../images/Higor-Rossato.jpg")
+    background-image: url("/theme/images/profile-picture.jpg")
     background-position: center center
     background-repeat: no-repeat
     background-size: cover
