--- a/static/sass/base.sass
+++ b/static/sass/base.sass
@@ -106,17 +106,25 @@ header
         display: block
         font-size: 0.75rem
 
+    &__empty,
+    &__title
+        color: #333
+        text-decoration: none
+        font-weight: 400
+        line-height: 1.4
+
+    &__empty
+        font-size: 1.5rem
+        font-style: italic
+        text-align: center
+
     &__summary
         font-size: 0.875rem
         font-style: italic
         margin: 0.8rem 0
 
     &__title
-        color: #333
-        text-decoration: none
         font-size: 1.2rem
-        font-weight: 400
-        line-height: 1.4
 
         &:hover
             color: #e74c3c
