--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,21 @@
 {% extends "base.html" %} {% block content %}
 <div class="content merriweather">
-    {% for article in articles_page.object_list %}
-    <div class="post">
-        <a href="{{ SITEURL }}/{{ article.url }}" class="post__title">{{ article.title }}</a>
-        <p class="post__summary">{{ article.summary }}</p>
-        <div class="post__date">{{ article.locale_date }}</div>
-    </div>
-    {% endfor %}
+    {% if articles_page.object_list %}
+        {% for article in articles_page.object_list %}
+        <div class="post">
+            <a href="{{ SITEURL }}/{{ article.url }}" class="post__title">{{ article.title }}</a>
+            <p class="post__summary">{{ article.summary }}</p>
+            <div class="post__date">{{ article.locale_date }}</div>
+        </div>
+        {% endfor %}
+    {% else %}
+        <div class="post">
+            <p class="post__empty">Nothing here... yet!</p>
+        </div>
+    {% endif %}
 </div>
 
-{% if DEFAULT_PAGINATION %}
+{% if DEFAULT_PAGINATION and articles_page.object_list|length >= DEFAULT_PAGINATION %}
 <div class="paginator">
     {% if articles_page.has_previous() %} {% if articles_page.previous_page_number() == 1 %}
     <a href="{{ SITEURL }}/{{ page_name }}.html">
