--- a/static/sass/base.sass
+++ b/static/sass/base.sass
@@ -1,4 +1,4 @@
-*
+html, body
     margin: 0
     padding: 0
 
@@ -64,7 +64,7 @@ header
 
 .nav
     list-style: none
-    margin: 1.25rem auto 0
+    margin: 3.25rem auto 0
     padding-left: 0
     text-align: center
     text-transform: uppercase
@@ -160,7 +160,6 @@ footer
         color: #454545
         font-weight: 300
         line-height: 1.625rem
-        padding-top: 1.25rem
 
 pre
     margin-top: 1rem !important
