--- a/templates/page.html
+++ b/templates/page.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
 {% block title %}
-    {{ page.title|striptags }}
+    {{ super() }} - {{ page.title|striptags|capitalize }}
 {% endblock title %}
 
 {% block content %}
     <div class="content post-detail merriweather">
-        <h1 class="post-detail__title">{{ page.title }}</h1>
-        <h4 class="post-detail__date">{{ page.locale_date }}</h4>
+        <!-- <h1 class="post-detail__title">{{ page.title }}</h1> -->
+        <!-- <h4 class="post-detail__date">{{ page.locale_date }}</h4> -->
         {{ page.content }}
     </div>
 {% endblock content %}
