--- a/static/sass/base.sass
+++ b/static/sass/base.sass
@@ -247,3 +247,6 @@ pre
         li
             display: inline-block
             margin-left: 1.2rem
+
+            &:first-child
+                margin-left: 0
