--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
         <div class="container">
             <header>
                 {% if PROFILE_IMAGE %}
-                <h1 class="profile" style="background-image:url(/images/{{ PROFILE_IMAGE }})">
+                <h1 class="profile" style="background-image:url(/images/{{ PROFILE_IMAGE }}); {% if PROFILE_BORDER %}border: {{ PROFILE_BORDER }}{% endif %}">
                     <a href="/"></a>
                 </h1>
                 {% else %}
