--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,3 @@
 <footer>
-    <p>Powered by <a href="https://blog.getpelican.com/" target="_blank">Pelican</a>, which takes great advantages of <a href="https://python.org">Python.</a></p>
+    <p>Powered by <a href="https://blog.getpelican.com/" target="_blank">Pelican</a>, which takes great advantages of <a href="https://python.org" target="_blank">Python.</a></p>
 </footer>
