Adding link to site name

--- a/static/sass/base.sass
+++ b/static/sass/base.sass
@@ -44,6 +44,10 @@ header
     margin: 1rem 0
     text-align: center
 
+    a
+        color: inherit
+        text-decoration: none
+
 .profile
     background-image: url("/theme/images/profile-picture.jpg")
     background-position: center center
