--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,9 @@
                 </h1>
                 {% endif %}
 
-                <h3 class="site-name sansita-font">{{ SITENAME }}</h3>
+                <h3 class="site-name sansita-font">
+                    <a href="/">{{ SITENAME }}</a>
+                </h3>
 
                 {% if INTRO %}
                 <p class="intro merriweather">{{ INTRO }}</p>
