--- a/static/sass/base.sass
+++ b/static/sass/base.sass
@@ -165,6 +165,14 @@ footer
         font-weight: 300
         line-height: 1.625rem
 
+.code
+    background: #272822
+    color: #f8f8f2
+    padding: 0.1rem 0.3rem
+    font-style: italic
+    font-size: 0.8rem
+    vertical-align: middle
+
 pre
     margin-top: 1rem !important
     font-size: 0.75rem
