--- a/static/sass/base.sass
+++ b/static/sass/base.sass
@@ -165,7 +165,7 @@ footer
         font-weight: 300
         line-height: 1.625rem
 
-.code
+code
     background: #272822
     color: #f8f8f2
     padding: 0.1rem 0.3rem
